Adding a Logger
